[package]
name = "expect-test"
version = "1.5.1"
description = "Minimalistic snapshot testing library"
keywords = ["snapshot", "testing", "expect"]
categories = ["development-tools::testing"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-analyzer/expect-test"
authors = ["rust-analyzer developers"]
edition = "2018"
rust-version = "1.60.0"

exclude = ["./github", "bors.toml", "rustfmt.toml"]

[workspace]
members = ["xtask"]

[dependencies]
once_cell = "1"
dissimilar = "1"
